--- a/local/kubernetes/5_application-deployment-local.yml
+++ b/local/kubernetes/5_application-deployment-local.yml
@@ -20,7 +20,10 @@ spec:
           image: com.backend.programming.learning.system/core.service:1.0-SNAPSHOT
           env:
             - name: SPRING_PROFILES_ACTIVE
-              value: "prod"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_PROFILES_ACTIVE
             - name: JAVA_TOOL_OPTIONS
               value: "-Xmx256m -Xms128m"
             - name: LOGGING_LEVEL_COM_BACKEND_PROGRAMMING_LEARNING_SYSTEM
@@ -28,19 +31,40 @@ spec:
             - name: LOGGING_LEVEL_ROOT
               value: "info"
             - name: SPRING_DATASOURCE_URL
-              value: "jdbc:postgresql://host.docker.internal:5432/core-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: CORE_SPRING_DATASOURCE_URL
             - name: SPRING_DATASOURCE_USERNAME
-              value: "postgres"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_DATASOURCE_USERNAME
             - name: SPRING_DATASOURCE_PASSWORD
-              value: "localdb"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_DATASOURCE_PASSWORD
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
-              value: "local-confluent-kafka-cp-kafka-headless:9092"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: KAFKA-CONFIG_BOOTSTRAP-SERVERS
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
-              value: "http://local-confluent-kafka-cp-schema-registry:8081"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
             - name: CONFIG_SERVER
-              value: "http://config-server:9999"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: CONFIG_SERVER
             - name: EUREKA_SERVER
-              value: "http://discovery-service:8761/eureka"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: EUREKA_SERVER
           resources:
             limits:
               cpu: "500m"
@@ -87,7 +111,10 @@ spec:
           image: com.backend.programming.learning.system/auth.service:1.0-SNAPSHOT
           env:
             - name: SPRING_PROFILES_ACTIVE
-              value: "prod"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_PROFILES_ACTIVE
             - name: JAVA_TOOL_OPTIONS
               value: "-Xmx256m -Xms128m"
             - name: LOGGING_LEVEL_COM_BACKEND_PROGRAMMING_LEARNING_SYSTEM
@@ -95,19 +122,40 @@ spec:
             - name: LOGGING_LEVEL_ROOT
               value: "info"
             - name: SPRING_DATASOURCE_URL
-              value: "jdbc:postgresql://host.docker.internal:5432/auth-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: AUTH_SPRING_DATASOURCE_URL
             - name: SPRING_DATASOURCE_USERNAME
-              value: "postgres"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_DATASOURCE_USERNAME
             - name: SPRING_DATASOURCE_PASSWORD
-              value: "localdb"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_DATASOURCE_PASSWORD
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
-              value: "local-confluent-kafka-cp-kafka-headless:9092"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: KAFKA-CONFIG_BOOTSTRAP-SERVERS
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
-              value: "http://local-confluent-kafka-cp-schema-registry:8081"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
             - name: CONFIG_SERVER
-              value: "http://config-server:9999"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: CONFIG_SERVER
             - name: EUREKA_SERVER
-              value: "http://discovery-service:8761/eureka"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: EUREKA_SERVER
           resources:
             limits:
               cpu: "500m"
@@ -154,7 +202,10 @@ spec:
           image: com.backend.programming.learning.system/code.assessment.service:1.0-SNAPSHOT
           env:
             - name: SPRING_PROFILES_ACTIVE
-              value: "prod"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_PROFILES_ACTIVE
             - name: JAVA_TOOL_OPTIONS
               value: "-Xmx256m -Xms128m"
             - name: LOGGING_LEVEL_COM_BACKEND_PROGRAMMING_LEARNING_SYSTEM
@@ -162,19 +213,40 @@ spec:
             - name: LOGGING_LEVEL_ROOT
               value: "info"
             - name: SPRING_DATASOURCE_URL
-              value: "jdbc:postgresql://host.docker.internal:5432/code-assessment-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: CODE_ASSESSMENT_SPRING_DATASOURCE_URL
             - name: SPRING_DATASOURCE_USERNAME
-              value: "postgres"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_DATASOURCE_USERNAME
             - name: SPRING_DATASOURCE_PASSWORD
-              value: "localdb"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_DATASOURCE_PASSWORD
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
-              value: "local-confluent-kafka-cp-kafka-headless:9092"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: KAFKA-CONFIG_BOOTSTRAP-SERVERS
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
-              value: "http://local-confluent-kafka-cp-schema-registry:8081"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
             - name: CONFIG_SERVER
-              value: "http://config-server:9999"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: CONFIG_SERVER
             - name: EUREKA_SERVER
-              value: "http://discovery-service:8761/eureka"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: EUREKA_SERVER
           resources:
             limits:
               cpu: "500m"
@@ -221,7 +293,10 @@ spec:
           image: com.backend.programming.learning.system/course.service:1.0-SNAPSHOT
           env:
             - name: SPRING_PROFILES_ACTIVE
-              value: "prod"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_PROFILES_ACTIVE
             - name: JAVA_TOOL_OPTIONS
               value: "-Xmx256m -Xms128m"
             - name: LOGGING_LEVEL_COM_BACKEND_PROGRAMMING_LEARNING_SYSTEM
@@ -229,19 +304,40 @@ spec:
             - name: LOGGING_LEVEL_ROOT
               value: "info"
             - name: SPRING_DATASOURCE_URL
-              value: "jdbc:postgresql://host.docker.internal:5432/course-service?currentSchema=public&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: COURSE_SPRING_DATASOURCE_URL
             - name: SPRING_DATASOURCE_USERNAME
-              value: "postgres"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_DATASOURCE_USERNAME
             - name: SPRING_DATASOURCE_PASSWORD
-              value: "localdb"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: SPRING_DATASOURCE_PASSWORD
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
-              value: "local-confluent-kafka-cp-kafka-headless:9092"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: KAFKA-CONFIG_BOOTSTRAP-SERVERS
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
-              value: "http://local-confluent-kafka-cp-schema-registry:8081"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
             - name: CONFIG_SERVER
-              value: "http://config-server:9999"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: CONFIG_SERVER
             - name: EUREKA_SERVER
-              value: "http://discovery-service:8761/eureka"
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-programming-learning-system-configmap
+                  key: EUREKA_SERVER
           resources:
             limits:
               cpu: "500m"
