--- a/local/kubernetes/2_keycloak.yml
+++ b/local/kubernetes/2_keycloak.yml
@@ -32,6 +32,13 @@ spec:
           ports:
             - name: http
               containerPort: 8080
+          resources:
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
+            requests:
+              cpu: "200m"
+              memory: "128Mi"
 ---
 apiVersion: v1
 kind: Service
