--- a/my_helms/keycloak/values.yaml
+++ b/my_helms/keycloak/values.yaml
@@ -1235,6 +1235,9 @@ keycloakConfigCli:
 ##
 postgresql:
   enabled: true
+  primary:
+    persistence:
+      size: 1Gi
   auth:
     postgresPassword: ""
     username: bn_keycloak
