--- a/production/kubernetes/1_configmaps.yml
+++ b/production/kubernetes/1_configmaps.yml
@@ -9,9 +9,9 @@ data:
   CONFIGSERVER_APPLICATION_NAME: "config-server"  
   EUREKA_APPLICATION_NAME: "discovery-service"
   EUREKA_INSTANCE_HOSTNAME: "discovery-service"
-  SPRING_REDIS_HOST: "redis-master"
-  SPRING_REDIS_PORT: "6379"
-  SPRING_REDIS_PASSWORD: "admin"
+  SPRING_DATA_REDIS_HOST: "redis-master"
+  SPRING_DATA_REDIS_PORT: "6379"
+  SPRING_DATA_REDIS_PASSWORD: "admin"
   CORE_APPLICATION_NAME: "core-service"
   AUTH_APPLICATION_NAME: "auth-service"
   CODE_ASSESSMENT_APPLICATION_NAME: "code-assessment-service"
